[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/ui/btn_normal_style.tres" type="StyleBox" id=3]
[ext_resource path="res://src/ui/btn_hover_style.tres" type="StyleBox" id=4]
[ext_resource path="res://src/ui/menu.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/btn_hover.wav" type="AudioStream" id=6]
[ext_resource path="res://src/ui/btn_focus_style.tres" type="StyleBox" id=7]
[ext_resource path="res://src/ui/btn_pressed_style.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Metropolis-Black.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Metropolis-Black.ttf"

[sub_resource type="DynamicFont" id=4]
size = 4
font_data = SubResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 172.0
margin_bottom = 88.0
custom_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 172.0
margin_bottom = 45.0
custom_constants/margin_bottom = 8

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 172.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "BIRDU"
align = 1

[node name="ButtonPlay" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 76.0
margin_top = 47.0
margin_right = 95.0
margin_bottom = 56.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="ButtonCredits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 71.0
margin_top = 58.0
margin_right = 101.0
margin_bottom = 67.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 76.0
margin_top = 69.0
margin_right = 95.0
margin_bottom = 78.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="LD49Tag" type="Label" parent="."]
margin_left = 3.63316
margin_top = 101.005
margin_right = 75.6332
margin_bottom = 106.005
custom_fonts/font = SubResource( 4 )
text = "#LD49"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
